Fixed dataset count vertical alignment; cleanup

--- a/src/app/datasets/dataset-table/dataset-table.component.scss
+++ b/src/app/datasets/dataset-table/dataset-table.component.scss
@@ -4,7 +4,7 @@ $ds-archive: mat-palette($mat-green, 600);
 
 /*Columns are dynamically injected, so this /deep/ ensures it is reflected onto the selector  */
 
-.mode-and-count-container {
+.mode-container {
   padding-left: 1em;
   float: left;
 }
@@ -14,37 +14,15 @@ $ds-archive: mat-palette($mat-green, 600);
 }
 
 .dataset-count {
-  margin-left: 1em;
-}
-
-:host /deep/ .center-align {
-  text-align: center;
-}
-
-:host /deep/ .left-align {
-  width: 100%;
-  text-align: left !important;
-}
-
-
-:host /deep/ .buttons {
-  display: inline-block;
-  /* padding: 50px; */
-}
-
-:host /deep/ .ui-selection-column {
-  width: 30px !important;
-  /* padding: 50px; */
-}
-
+  position: relative;
+  float: left;
+  transform: translateY(50%);
+  margin-left: 1em; 
+}  
 
 :host /deep/ .disabled-row {
     pointer-events: none;
     opacity: 0.2 !important;
-}
-
-:host /deep/ table thead tr th p-dtcheckbox {
-  visibility:hidden;
 }
 
 :host /deep/ .mat-row:hover {
@@ -67,8 +45,3 @@ $ds-archive: mat-palette($mat-green, 600);
 :host /deep/ .row-empty {
   background-color: mat-color($warn, 100, 0.2);
 }
-
-
-/*td {
-    overflow: hidden;
-}*/
